add_subdirectory("Bloom")
add_subdirectory("Camera")
add_subdirectory("ManyTriangles")
add_subdirectory("MaterialSystem")
add_subdirectory("MeshGeneration")
# add_subdirectory("Mono")
add_subdirectory("PhongShading")
add_subdirectory("SetupTest")
# add_subdirectory("ShaderDataTypes")
# add_subdirectory("ShaderGenerator")
# add_subdirectory("ShaderReflection")
# add_subdirectory("ThreadPool")
add_subdirectory("UI")

